--- a/architects.css
+++ b/architects.css
@@ -3,6 +3,16 @@
 *{
     font-family: 'Work Sans', sans-serif;
 }
+.btn-primary{
+    border-radius: 8px;
+    color:#fff;
+    background: #FF900E;
+    font-size: 20px;
+    font-weight: 600;
+    padding:30px;
+    border: 0;
+    cursor: pointer;
+}
 header{
     background-color:rgba(255, 144, 14, 0.10);;
     padding:50px 240px;
@@ -41,4 +51,24 @@ nav a{
 }
 .banner-description{
     color: #727272;
+}
+.banner img{
+    margin-top: 20px;
+    width: 100%;
+}
+@media screen and (max-width:576px){
+    header{
+        padding:20px;
+    }
+    nav{
+        flex-direction: column;
+    }
+}
+@media screen and (min-width:576px) and (max-width:960px){
+    nav{
+        flex-direction: column;
+    }
+    header{
+        padding:50px;
+    }
 }
