--- a/architects.css
+++ b/architects.css
@@ -56,6 +56,39 @@ nav a{
     margin-top: 20px;
     width: 100%;
 }
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+.container{
+    display: flex;
+    align-items:center;
+}
+.teams-img-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap:5px;
+}
+.teams-content{
+    padding-left: 70px;
+    padding-right: 70px;
+}
+.teams-title{
+    font-size: 45px;
+}
+.quick{
+    color:#727272;
+    font-weight: 500;
+}
+.teams-features{
+    color:#FF900E;
+    font-weight: 700;
+}
+
+
+
+
 @media screen and (max-width:576px){
     header{
         padding:20px;
