--- a/architects.css
+++ b/architects.css
@@ -58,7 +58,7 @@ nav a{
 }
 main{
     max-width: 1440px;
-    margin: 0 auto;
+    margin: 70px auto;
 }
 
 .container{
@@ -93,12 +93,17 @@ main{
     header{
         padding:20px;
     }
-    nav{
+    nav,
+    .container{
         flex-direction: column;
+    }
+    .teams-img-container{
+        grid-template-columns: 1fr;
     }
 }
 @media screen and (min-width:576px) and (max-width:960px){
-    nav{
+    nav,
+    .container{
         flex-direction: column;
     }
     header{
